# smarthomechef

./: .gitattributes  .gitignore  .pylintrc  .replit  Dockerfile  FLOW AI HUẤN LUYỆN, HỌC HỎI, HIỂU VÀ TRẢ LỜI ĐÚNG CHO NGƯỜI DÙNG.md  FLOW XỬ LÝ CÂU HỎI GIÁ CẢ VÀ TẠO THỰC ĐƠN THEO NGÂN SÁCH.md  ID_RENUMBERING_FIX.md  README.md  _verify.py  clean_project.py  cleanup_migration_history.py  cleanup_migration_history2.py  create_superuser.py  docker-compose.yml  manage.py  pyproject.toml  pytest.ini  replit.md  reset_ids.py  seed_data.py  seed_vietnamese_foods.py  setup_google_oauth.py  test_run_log.txt  verify_ingredients_crawl.py  verify_renumbering.py
app/: admin.py  api_recipe_rating.py  auth_views.py  chat_views.py  config.py  context_processors.py  dashboard_views.py  food_views.py  meal_plan_views.py  models.py  nutrition_views.py  oauth_views.py  profile_views.py  urls.py  utils.py  views.py
artifacts/: implementation_plan.md
database/: schema_current.sql
docs/: CRAWL_WINMART.md  DEPLOYMENT.md  FLOW_IMPORT_CSV_ADMIN_PANEL.md  MEAL_PLAN_CHAT_FIXES.md  RUNBOOKS.md  ai-model.md  architecture.md  danh_sach_cau_hoi_bao_ve_do_an.md  database-schema.md  interface_descriptions.md  personalization-architecture.md  presentation_slides.md  project_achievements.md  smart_home_chef_architecture.md  smart_home_chef_features.md  state-diagrams-7-uc.md  style-guide.md  system_architecture.md  system_overview.md  system_survey.md  thesis_roadmap.md  usecase-specification-django-json-data.md  usecase.md
monitoring/: prometheus.yml
noi_tro_ai/: settings.py  wsgi.py
(+254 files in other folders)
